--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -58,11 +58,14 @@ main {
 .landing-page1 {
   height: 100vh;
   width: 100%;
-  background-color: salmon;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto Medium", sans-serif;
 }
 
-.landing-page2 {
-  height: 100vh;
-  width: 100%;
-  background-color: blue;
+.landing-page1 > h1 {
+  font-size: 4vw;
+  text-transform: uppercase;
 }
